--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://eugen-ko.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "install": "^0.13.0",
+    "nanoid": "^3.3.3",
     "npm": "^8.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
